--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ div
 {word-wrap: inherit;
 font-family: 'Times New Roman', Times, serif;
 font-weight: 150px;}
-.footer 
+footer
 {background-color: rgb(236, 230, 140);
 text-align: center;
 float: right;}
